--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <com.sp.tojoin.view.CustomViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
@@ -19,7 +20,8 @@
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:src="@drawable/edit"
-        android:backgroundTint="@color/colorPrimary"/>
+        app:layout_anchor="@id/viewpager"
+        android:id="@+id/floatbutton"
+        app:layout_anchorGravity="center_vertical|right"
+        android:src="@drawable/edit" />
 </android.support.design.widget.CoordinatorLayout>
