--- a/app/src/main/res/layout/activity_passagedetal.xml
+++ b/app/src/main/res/layout/activity_passagedetal.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <android.support.v7.widget.RecyclerView
+    android:layout_height="match_parent"
+    android:id="@+id/rootlaytout">
+    <WebView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:id="@+id/recycler_content"
-        />
-
+        android:id="@+id/webView">
+    </WebView>
 </LinearLayout>
