--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#ff6347</color>
     <color name="colorPrimaryDark">#ff6347</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#ff6347</color>
     <color name="pink">#ffc0cb</color><!--粉红色 -->
     <color name="lightpink">#ffb6c1</color><!--亮粉红色 -->
     <color name="white">#ffffff</color><!--白色 -->
