--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     <com.sp.tojoin.view.CustomViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
     </com.sp.tojoin.view.CustomViewPager>
 
     <com.ashokvarma.bottomnavigation.BottomNavigationBar
