对数据库存储文章的逻辑修改

--- a/app/src/main/res/layout/activity_passagedetail.xml
+++ b/app/src/main/res/layout/activity_passagedetail.xml
@@ -3,9 +3,17 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/rootlaytout">
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:text="评论"
+        android:id="@+id/btn_review"/>
     <WebView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="start"
         android:id="@+id/webView">
-    </WebView>
+</WebView>
 </LinearLayout>
